# CG-2425

./: .gitignore  CMakeLists.txt  Makefile
files/: box.3d  plane_2_3.3d  plano.3d  sphere_1_10_10.3d
include/engine/: World.h
include/ficheiro3d/: Ficheiro.h
include/figuras/: Triangles.h
src/: a.out  teste.3d
src/engine/: World.cpp  a.out  engine.cpp  processaXML.cpp  teste.3d
src/ficheiro3d/: Ficheiro.cpp
src/figuras/: Triangles.cpp  Triangles.h
src/gerador/: a.out  gerador.cpp  triangle.cpp
